// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render as disabled 1`] = `
<div
  className="checkbox"
>
  <div
    className="mdc-form-field"
  >
    <div
      className="mdc-checkbox mdc-checkbox--disabled"
    >
      <input
        className="mdc-checkbox__native-control"
        disabled={true}
        id="mockName"
        type="checkbox"
      />
      <div
        className="mdc-checkbox__background"
      >
        <svg
          className="mdc-checkbox__checkmark"
          viewBox="0 0 24 24"
        >
          <path
            className="mdc-checkbox__checkmark-path"
            d="M1.73,12.91 8.1,19.28 22.79,4.59"
            fill="none"
          />
        </svg>
        <div
          className="mdc-checkbox__mixedmark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox should render correctly with the prop checked 1`] = `
<div
  className="checkbox"
>
  <div
    className="mdc-form-field"
  >
    <div
      className="mdc-checkbox"
    >
      <input
        className="mdc-checkbox__native-control"
        id="mockName"
        type="checkbox"
      />
      <div
        className="mdc-checkbox__background"
      >
        <svg
          className="mdc-checkbox__checkmark"
          viewBox="0 0 24 24"
        >
          <path
            className="mdc-checkbox__checkmark-path"
            d="M1.73,12.91 8.1,19.28 22.79,4.59"
            fill="none"
          />
        </svg>
        <div
          className="mdc-checkbox__mixedmark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox should render with the correct props 1`] = `
<div
  className="checkbox mock-class"
>
  <div
    className="mdc-form-field"
  >
    <div
      className="mdc-checkbox"
    >
      <input
        className="mdc-checkbox__native-control"
        id="mockName"
        type="checkbox"
      />
      <div
        className="mdc-checkbox__background"
      >
        <svg
          className="mdc-checkbox__checkmark"
          viewBox="0 0 24 24"
        >
          <path
            className="mdc-checkbox__checkmark-path"
            d="M1.73,12.91 8.1,19.28 22.79,4.59"
            fill="none"
          />
        </svg>
        <div
          className="mdc-checkbox__mixedmark"
        />
      </div>
    </div>
  </div>
</div>
`;
